// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PilotDashboardPageComponent should not render the grids if there is no mission for the pilot 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-10"
    >
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;

exports[`PilotDashboardPageComponent should not render the template when there is no user 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <!--container-->
</div>
`;

exports[`PilotDashboardPageComponent should render one active mission if one active mission is provided for the pilot 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-10"
    >
      <app-grid-section>
        <div
          class="bg-slate-100 p-5 rounded-lg flex flex-col space-y-4"
        >
          <app-grid-section-header>
            <div
              class="flex flex-row justify-between"
            >
              <h3
                class="text-xl font-medium"
              >
                 assigned 
              </h3>
            </div>
          </app-grid-section-header>
          <app-grid>
            <div
              class="grid gap-4 col-span-full grid-cols-6"
            >
              <app-grid-header
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="xl:grid grid-cols-subgrid col-span-full hidden"
                >
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     i 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     field 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     area 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     scheti 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     stat 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     act 
                  </h4>
                  <!--container-->
                </div>
              </app-grid-header>
              <app-grid-item-list
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="grid xl:grid-cols-subgrid grid-cols-1 md:grid-cols-2 col-span-full gap-4"
                >
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             1 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                             10 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             scheti 
                          </p>
                          <!--container-->
                          <time>
                             scheti 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             stat 
                          </p>
                          <!--container-->
                          <app-labeled-badge>
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.pending 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <a
                        class="text-blue-500"
                        href="/"
                      >
                        missionText
                      </a>
                    </div>
                  </app-grid-item>
                  <!--container-->
                </div>
              </app-grid-item-list>
            </div>
          </app-grid>
        </div>
      </app-grid-section>
      <!--container-->
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;

exports[`PilotDashboardPageComponent should render one completed mission if one completed mission is provided for the pilot 1`] = `
<div
  id="root5"
  ng-version="20.1.7"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-10"
    >
      <app-grid-section>
        <div
          class="bg-slate-100 p-5 rounded-lg flex flex-col space-y-4"
        >
          <app-grid-section-header>
            <div
              class="flex flex-row justify-between"
            >
              <h3
                class="text-xl font-medium"
              >
                 completed 
              </h3>
            </div>
          </app-grid-section-header>
          <app-grid>
            <div
              class="grid gap-4 col-span-full grid-cols-6"
            >
              <app-grid-header
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="xl:grid grid-cols-subgrid col-span-full hidden"
                >
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     i 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     field 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     area 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     ti 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     per 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     act 
                  </h4>
                  <!--container-->
                </div>
              </app-grid-header>
              <app-grid-item-list
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="grid xl:grid-cols-subgrid grid-cols-1 md:grid-cols-2 col-span-full gap-4"
                >
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             5 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                             10 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             ti 
                          </p>
                          <!--container-->
                          <time>
                             val 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             per 
                          </p>
                          <!--container-->
                          <app-labeled-badge>
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.excellent 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <a
                        class="text-blue-500"
                        href="/"
                      >
                        reportText
                      </a>
                    </div>
                  </app-grid-item>
                  <!--container-->
                </div>
              </app-grid-item-list>
            </div>
          </app-grid>
        </div>
      </app-grid-section>
      <!--container-->
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;

exports[`PilotDashboardPageComponent should render the template when there is a user provided 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-10"
    >
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;

exports[`PilotDashboardPageComponent should render three active missions if three missions are provided for the pilot 1`] = `
<div
  id="root4"
  ng-version="20.1.7"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-10"
    >
      <app-grid-section>
        <div
          class="bg-slate-100 p-5 rounded-lg flex flex-col space-y-4"
        >
          <app-grid-section-header>
            <div
              class="flex flex-row justify-between"
            >
              <h3
                class="text-xl font-medium"
              >
                 assigned 
              </h3>
            </div>
          </app-grid-section-header>
          <app-grid>
            <div
              class="grid gap-4 col-span-full grid-cols-6"
            >
              <app-grid-header
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="xl:grid grid-cols-subgrid col-span-full hidden"
                >
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     i 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     field 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     area 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     scheti 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     stat 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     act 
                  </h4>
                  <!--container-->
                </div>
              </app-grid-header>
              <app-grid-item-list
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="grid xl:grid-cols-subgrid grid-cols-1 md:grid-cols-2 col-span-full gap-4"
                >
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             1 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                             10 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             scheti 
                          </p>
                          <!--container-->
                          <time>
                             scheti 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             stat 
                          </p>
                          <!--container-->
                          <app-labeled-badge>
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.pending 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <a
                        class="text-blue-500"
                        href="/"
                      >
                        missionText
                      </a>
                    </div>
                  </app-grid-item>
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             3 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                             10 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             scheti 
                          </p>
                          <!--container-->
                          <time>
                             scheti 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             stat 
                          </p>
                          <!--container-->
                          <app-labeled-badge>
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.pending 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <a
                        class="text-blue-500"
                        href="/"
                      >
                        missionText
                      </a>
                    </div>
                  </app-grid-item>
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             4 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                             10 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             scheti 
                          </p>
                          <!--container-->
                          <time>
                             scheti 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             stat 
                          </p>
                          <!--container-->
                          <app-labeled-badge>
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.pending 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <a
                        class="text-blue-500"
                        href="/"
                      >
                        missionText
                      </a>
                    </div>
                  </app-grid-item>
                  <!--container-->
                </div>
              </app-grid-item-list>
            </div>
          </app-grid>
        </div>
      </app-grid-section>
      <!--container-->
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;

exports[`PilotDashboardPageComponent should render three completed missions if three completed missions are provided for the pilot 1`] = `
<div
  id="root6"
  ng-version="20.1.7"
>
  <app-dashboard-spacer>
    <div
      class="flex flex-col gap-10"
    >
      <app-grid-section>
        <div
          class="bg-slate-100 p-5 rounded-lg flex flex-col space-y-4"
        >
          <app-grid-section-header>
            <div
              class="flex flex-row justify-between"
            >
              <h3
                class="text-xl font-medium"
              >
                 completed 
              </h3>
            </div>
          </app-grid-section-header>
          <app-grid>
            <div
              class="grid gap-4 col-span-full grid-cols-6"
            >
              <app-grid-header
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="xl:grid grid-cols-subgrid col-span-full hidden"
                >
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     i 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     field 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     area 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     ti 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     per 
                  </h4>
                  <h4
                    class="uppercase xl:flex items-center text-gray-500 text-sm font-medium"
                  >
                     act 
                  </h4>
                  <!--container-->
                </div>
              </app-grid-header>
              <app-grid-item-list
                class="grid grid-cols-subgrid col-span-full"
              >
                <div
                  class="grid xl:grid-cols-subgrid grid-cols-1 md:grid-cols-2 col-span-full gap-4"
                >
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             5 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                             10 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             ti 
                          </p>
                          <!--container-->
                          <time>
                             val 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             per 
                          </p>
                          <!--container-->
                          <app-labeled-badge>
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.excellent 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <a
                        class="text-blue-500"
                        href="/"
                      >
                        reportText
                      </a>
                    </div>
                  </app-grid-item>
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             7 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                             10 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             ti 
                          </p>
                          <!--container-->
                          <time>
                             val 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             per 
                          </p>
                          <!--container-->
                          <app-labeled-badge>
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.excellent 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <a
                        class="text-blue-500"
                        href="/"
                      >
                        reportText
                      </a>
                    </div>
                  </app-grid-item>
                  <app-grid-item
                    class="grid grid-cols-subgrid xl:col-span-full"
                  >
                    <div
                      class="xl:grid flex flex-col xl:grid-cols-subgrid xl:col-span-full xl:items-center gap-3 p-4 xl:p-0 rounded-xl shadow xl:shadow-none hover:-translate-y-1 xl:hover:translate-y-0 duration-100"
                    >
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             i 
                          </p>
                          <!--container-->
                          <p
                            class="font-medium text-blue-800"
                          >
                             8 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             field 
                          </p>
                          <!--container-->
                          <p>
                             field 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             area 
                          </p>
                          <!--container-->
                          <p>
                             10 
                          </p>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             ti 
                          </p>
                          <!--container-->
                          <time>
                             val 
                          </time>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <!--container-->
                      <app-key-value>
                        <div
                          class="duration-500 h-full flex flex-col justify-center"
                        >
                          <p
                            class="xl:hidden display uppercase text-gray-400 text-xs tracking-widest"
                          >
                             per 
                          </p>
                          <!--container-->
                          <app-labeled-badge>
                            <div
                              class="h-fit py-2 px-4 rounded-full w-fit bg-green-200 text-green-600"
                            >
                               DashboardPage.excellent 
                            </div>
                          </app-labeled-badge>
                        </div>
                        <!--container-->
                      </app-key-value>
                      <a
                        class="text-blue-500"
                        href="/"
                      >
                        reportText
                      </a>
                    </div>
                  </app-grid-item>
                  <!--container-->
                </div>
              </app-grid-item-list>
            </div>
          </app-grid>
        </div>
      </app-grid-section>
      <!--container-->
      <!--container-->
    </div>
  </app-dashboard-spacer>
  <!--container-->
  <!--container-->
</div>
`;
